# anki-tools

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-bump.yml  release-pr.yml  release.yml
addon/: __init__.py  manifest.json  server.py
anki_browse_web/: __init__.py  server.py
docs/: 2025-12-24-release.md  2025-12-24-rework-agent-docs.md  2025-12-24-skeleton-ux.md  2025-12-24-suspense-refactor.md  2025-12-25-bulk-edit.md  2025-12-25-deck-filter-and-perf.md  2025-12-25-export-analysis.md  2025-12-25-perf-optimization.md  2025-12-26-create-note-with-audio.md  2025-12-26-optimistic-updates.md  2025-12-28-bulk-import.md  2025-12-28-export-visible-columns.md  2025-12-28-test-fixture-refactor.md  2025-12-28-toast-notifications.md  2025-12-29-audio-generation.md  TODO.md  anki-schema.md  architecture.md  bulk-edit-feature.md  feedback.md  inbox.md  plan-addon.md  plan.md  refactor-unified-card-model.md  research.md  table-polish.md  testing.md  todo.md
scripts/: exec.js  setup-dev.js
scripts/tmp/: anki-bench.js
src/: App.tsx  api.ts  index.tsx  root.tsx  styles.css
src/components/: AnkiBrowser.tsx  NotesTable.tsx  browse-table.tsx  bulk-actions-toolbar.tsx  bulk-actions.tsx  bulk-import-dialog.tsx  cards-table.tsx  create-note-dialog.tsx  data-table.tsx  error-boundary.tsx  note-detail.tsx  notes-table.tsx  search-input.tsx  settings-dialog.tsx  sql-console.tsx  (+1 more)
tests/: prepare.py  server.py
(+24 files in other folders)
